# gestor-salas

./: .gitignore  .prettierignore  .prettierrc  README.md  pyproject.toml  setup.sh
.github/workflows/: django.yaml
docs/: README.md  propuesta.md
docs/database-design/: database_design.dbml
docs/propuesta/: propuesta.md
src/apps/reservas/: __init__.py  admin.py  models.py  services.py  tests.py  urls.py  views.py
src/apps/reservas/migrations/: 0001_initial.py  0002_rename_primer_apellido_encargado_primerapellido_and_more.py  0003_remove_evento_incidentes_evento_reporte_and_more.py  0004_delete_encargado_alter_evento_asistentes.py
src/apps/reservas/static/reservas/css/: style.css
src/apps/reservas/static/reservas/js/: calendar.js
src/apps/usuarios/: __init__.py  admin.py  models.py  services.py  tests.py  urls.py  views.py
src/apps/usuarios/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
src/templates/: base.html
src/templates/reservas/: dashboard.html  evento_detail.html  evento_editar.html  evento_form.html  eventos_lista.html  reportes.html  sala_editar.html  sala_form.html  sala_list.html
src/templates/usuarios/: login.html
